# aoscdk-rs

./: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/res/: locale.gen
core/src/: install.rs  lib.rs  network.rs
core/src/commands/: mod.rs
core/src/tasks/: validate.rs
core/tests/: parser.rs  test.pl
documentation/: .footer.tex  build.sh
documentation/01-prd/: 001-main.md  002-workflow.md
res/: languagelist
src/: disks.rs  install.rs  log.rs  main.rs  network.rs  parser.rs
src/commands/: mod.rs
src/frontend/: cli.rs  mod.rs  tui.rs
src/frontend/games/: mod.rs
src/frontend/games/mines/: game.rs  mod.rs
src/frontend/games/minesweapers/: mod.rs
src/frontend/games/minesweeper/: mines.rs
src/frontend/games/sudoku/: board.rs  game.rs  mod.rs  sudoku.rs  sudokumod.rs
tests/: parser.rs
tui/: Cargo.toml
tui/src/: main.rs  tui.rs
