[package]
name = "aoscdk-rs"
version = "0.7.1"
authors = ["liushuyu <liushuyu011@gmail.com>", "eatradish <sakiiily@aosc.io>"]

edition = "2021"


[dependencies]
nom = "^7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
nix = "0.26"
libparted = "0.1"
cursive = "0.20"
cursive_table_view = "0.14"
lazy_static = "1.4"
number_prefix = "0.4"
xz2 = "0.1"
tar = { git = "https://github.com/eatradish/tar-rs", rev = "d169fb24f80fbf626c87374e55ff45e887516e37" }
sha2 = "0.10"
hex = "0.4"
tempfile = "3.2"
cursive-async-view = "0.6"
tokio = { version = "1.15", features = ["rt", "rt-multi-thread", "macros"]}
futures = "0.3"
rand = "0.8"
ctrlc = { version = "3.2", features = ["termination"] }
fstab-generate = "0.1"
disk-types = "0.1"
sysinfo = "0.29"
clap = { version = "4.2", features = ["derive"] }
indicatif = "0.17"
libparted-sys = "0.3"
clock-core = "0.0.7"
hhmmss = "0.1.0"
sudoku = "0.7"
log = "0.4"
fern = "0.6"
time = { version = "0.3", features = ["formatting"] }
libc = "0.2"
distinst-squashfs = { git = "https://github.com/AOSC-Dev/distinst-squashfs", rev = "a5c59fe2f429ee9b57327b7423c5c70e14a63fe8" }

[features]
is_retro = []

[profile.release]
lto = true
