[package]
name = "aoscdk-rs"
version = "1.0.3"
authors = ["liushuyu <liushuyu011@gmail.com>", "eatradish <sakiiily@aosc.io>"]
edition = "2021"

[dependencies]
nom = "^7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
libparted = "0.1"
cursive = "0.20"
cursive_table_view = "0.14"
number_prefix = "0.4"
xz2 = "0.1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.2"
cursive-async-view = "0.6"
tokio = { version = "1.15", features = ["rt-multi-thread"] }
futures = "0.3"
rand = "0.8"
ctrlc = { version = "3.2", features = ["termination"] }
fstab-generate = "0.1"
disk-types = "0.1"
sysinfo = "0.30"
clap = { version = "4.2", features = ["derive"] }
indicatif = "0.17"
libparted-sys = "0.3"
clock-core = "0.0.7"
hhmmss = "0.1.0"
sudoku = "0.8"
log = "0.4"
fern = "0.6"
time = { version = "0.3", features = ["formatting"] }
rustix =  { version = "0.38", features = ["process", "fs", "mount"] }
unsquashfs-wrapper = "0.1"
libc = "0.2"
once_cell = "1.19"
send_wrapper = "0.6.0"
fancy-regex = "0.13"

[patch.crates-io]
loopdev = { git = "https://github.com/eatradish/loopdev", rev = "0dde43a15320cf84148e57fed8aec6683755c04f" }

[features]
is_retro = []

[profile.release]
lto = true
