[package]
name = "aoscdk-rs-core"
version = "0.2.1-alpha.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"


[dependencies]
nom = "^7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
nix = "0.23"
libparted = "0.1"
lazy_static = "1.4"
xz2 = "0.1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
faster-hex = "0.6"
tempfile = "3.2"

[features]
is_retro = []
