[package]
name = "aoscdk-rs-tui"
version = "0.2.1-alpha.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"


[dependencies]
core = { path = "../core", package = "aoscdk-rs-core" }

anyhow = "1.0"
cursive = "0.16"
cursive_table_view = { git = "https://github.com/BonsaiDen/cursive_table_view" }
cursive-async-view = "0.5"
number_prefix = "0.4"
